# meltano-map-transform

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  meltano.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml  semantic.yml
.github/workflows/: build.yaml  ci.yml  constraints.txt  meltano-run.yml  project_add.yml  test.yml  version_bump.yml
examples/: .gitignore  README.md  meltano.yml
examples/output/: .gitignore
fixtures/: customers_ipv6.csv  ext_customers.csv  nested.singer  people.singer  variant.singer
meltano_map_transform/: __init__.py  mapper.py
scripts/: nested.sh  people.sh  variant.sh
