[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.28",
]

[project]
name = "meltano-map-transform"
description = "Singer-compatible inline map transformer, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Inline Transformation",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [ { name = "Meltano Team and Contributors" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "faker>=22.5",
  "singer-sdk~=0.52.0",
]
urls.Documentation = "https://github.com/MeltanoLabs/meltano-map-transform#readme"
urls.Homepage = "https://github.com/MeltanoLabs/meltano-map-transform"
urls.Repository = "https://github.com/MeltanoLabs/meltano-map-transform"
scripts.meltano-map-transform = "meltano_map_transform.mapper:StreamTransform.cli"

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pytest>=8",
  "ty>=0.0.1a19",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
src = [
  "meltano_map_transform",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "DJ", # flake8-django
  "PD", # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-undocumented-public-function
  "S101",   # assert
]
lint.isort.known-first-party = [
  "meltano_map_transform",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
warn_unused_configs = true
