[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "meltano-map-transform"
description = "Singer-compatible inline map transformer, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Inline Transformation",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "faker>=22.5",
  "singer-sdk~=0.53.5",
]
[[project.authors]]
name = "Meltano Team and Contributors"
[project.scripts]
meltano-map-transform = "meltano_map_transform.mapper:StreamTransform.cli"
[project.urls]
Documentation = "https://github.com/MeltanoLabs/meltano-map-transform#readme"
Homepage = "https://github.com/MeltanoLabs/meltano-map-transform"
Repository = "https://github.com/MeltanoLabs/meltano-map-transform"

[dependency-groups]
dev = [
  "mypy>=1.19",
  "pytest>=9",
  "ty>=0.0.23",
]

[tool.hatch]
[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.9"

[tool.ruff]
required-version = ">=0.15"
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "DJ", # flake8-django
  "PD", # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-undocumented-public-function
  "S101",   # assert
]
isort.known-first-party = [ "meltano_map_transform" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-vvv",
]
